--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
       "dev": "npx nodemon src/server.ts --watch 'src/' -e ts",
       "compile": "npx tsc",
       "start": "node ./dist/server.js",
-      "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+      "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+      "test": "jest",
+      "clean-db": "ts-node src/database/clear-database.ts"
    },
    "author": "",
    "license": "ISC",
@@ -21,16 +23,31 @@
       "morgan": "^1.10.0",
       "mysql2": "^3.11.5",
       "reflect-metadata": "^0.1.14",
+      "supertest": "^7.0.0",
       "typeorm": "^0.3.20"
    },
    "devDependencies": {
+      "@babel/core": "^7.26.0",
+      "@babel/cli": "^7.13.0",
+      "@babel/node": "^7.10.5",
+      "@babel/plugin-transform-modules-commonjs": "^7.13.0",
+      "@babel/preset-env": "^7.26.0",
+      "babel-plugin-transform-class-properties": "^6.24.1",
+      "@babel/preset-typescript": "^7.26.0",
+      "babel-preset-jest": "^26.6.2",
       "@types/cors": "^2.8.17",
       "@types/dotenv": "^8.2.3",
       "@types/express": "^4.17.21",
       "@types/helmet": "^4.0.0",
+      "@types/jest": "^29.5.14",
       "@types/morgan": "^1.9.9",
+      "@types/supertest": "^6.0.2",
+      "babel-jest": "^29.7.0",
+      "jest": "^29.7.0",
+      "ts-jest": "^29.2.5",
       "ts-node": "^10.9.2",
       "ts-node-dev": "^2.0.0",
-      "typescript": "^5.7.2"
+      "typescript": "^5.7.2",
+      "jest-cli": "^26.6.3"
    }
 }
