--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "express": "^4.21.1",
       "express-async-errors": "^3.1.1",
       "helmet": "^8.0.0",
+      "http-proxy-middleware": "^3.0.3",
       "morgan": "^1.10.0",
       "mysql2": "^3.11.5",
       "reflect-metadata": "^0.1.14",
@@ -27,14 +28,12 @@
       "typeorm": "^0.3.20"
    },
    "devDependencies": {
-      "@babel/core": "^7.26.0",
       "@babel/cli": "^7.13.0",
+      "@babel/core": "^7.26.0",
       "@babel/node": "^7.10.5",
       "@babel/plugin-transform-modules-commonjs": "^7.13.0",
       "@babel/preset-env": "^7.26.0",
-      "babel-plugin-transform-class-properties": "^6.24.1",
       "@babel/preset-typescript": "^7.26.0",
-      "babel-preset-jest": "^26.6.2",
       "@types/cors": "^2.8.17",
       "@types/dotenv": "^8.2.3",
       "@types/express": "^4.17.21",
@@ -43,11 +42,13 @@
       "@types/morgan": "^1.9.9",
       "@types/supertest": "^6.0.2",
       "babel-jest": "^29.7.0",
+      "babel-plugin-transform-class-properties": "^6.24.1",
+      "babel-preset-jest": "^26.6.2",
       "jest": "^29.7.0",
+      "jest-cli": "^26.6.3",
       "ts-jest": "^29.2.5",
       "ts-node": "^10.9.2",
       "ts-node-dev": "^2.0.0",
-      "typescript": "^5.7.2",
-      "jest-cli": "^26.6.3"
+      "typescript": "^5.7.2"
    }
 }
